# Hermes_Brainstem

./: .gitignore  DEPLOY_MANIFEST.md  LICENSE  README.md  SETUP_PROMPT.md  SKILL.md  config.example.yaml  env.example  pyproject.toml  pytest.ini  setup.sh
code/: __init__.py
code/hermes_memory/: __init__.py  __main__.py  app.py  cli.py
docs/: QUESTIONS.md  RECON.md  codex-worker-p0-recon-prompt.md
docs/codex-bundle/: 00_CORE.md  MOVE_REPORT.md  P0_RECON.md  P10_MCP.md  P11_HOOKS.md  P12_CONVERTERS.md  P13_E2E.md  P14_DEPLOY.md  P1_META_A.md  P2_META_BCD.md  P3_CORE.md  P4_BACKENDS.md  P5_INTERPRETER.md  P6_PIPELINE.md  P7_INBOX.md  P8_ATTACH.md  P9_SEARCH.md  cross_refs.md  fixtures.md  schemas.md  vault_meta_drafts.md
docs/dev-history/: CHANGES_APPLIED.md  PHASE_10_REPORT.md  PHASE_11_REPORT.md  PHASE_12_REPORT.md  PHASE_13_REPORT.md  PHASE_14_REPORT.md  PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PHASE_4_REPORT.md  PHASE_5_REPORT.md  PHASE_6_REPORT.md  PHASE_7_REPORT.md  PHASE_8_REPORT.md  PHASE_9_REPORT.md
tests/: conftest.py  test_clock.py  test_config_layer.py  test_deploy.py  test_deployment_assets.py  test_frontmatter.py  test_hasher.py  test_invariant_guard.py  test_logger.py  test_skill_manifest.py  test_uuid_gen.py  test_wikilink.py
tests/acceptance/: test_phase13_acceptance.py
tests/attach/: test_persist_attach.py
tests/backends/: test_backend_smoke.py  test_embedding_backends.py  test_notion_backend.py
tests/converters/: test_common.py  test_conversation_binary.py  test_notion_block.py
tests/e2e/: test_phase13_e2e.py
tests/hooks/: test_hook_notion_sync.py  test_quarantine_sweep.py  (+1 more)
(+110 files in other folders)
